--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "homepage": "https://github.com/Perluceo/liri-node-app#readme",
   "dependencies": {
     "axios": "^0.19.0",
+    "fs": "0.0.1-security",
+    "omdbapi": "^3.0.0",
     "request": "^2.88.0",
     "spotify": "^0.3.0"
   }
