--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "homepage": "https://github.com/Perluceo/liri-node-app#readme",
   "dependencies": {
     "axios": "^0.19.0",
+    "dotenv": "^8.0.0",
     "fs": "0.0.1-security",
+    "node-spotify-api": "^1.1.1",
     "omdbapi": "^3.0.0",
     "request": "^2.88.0",
     "spotify": "^0.3.0"
